--- a/ProgramadorWeb/M1U2_HTML/cv.css
+++ b/ProgramadorWeb/M1U2_HTML/cv.css
@@ -13,15 +13,67 @@ h1{
     border-radius: 14px;
 }
 
-
+.datosPersonales {
+    margin-top: 20px;
+    background-color: rgb(0, 204, 255);
+    border-radius: 13px;
+    margin-right: 200px;
+    padding: 20px;
+    
+}
 
 p{
     
     font-weight: 400;
     margin-right: 200px;
     padding-right: 600px;
+    
 }
 
 h2{
     font-weight: 600;
+}
+
+.conocimientos{
+    margin-top: 20px;
+    background-color: rgb(182, 221, 76);
+    border-radius: 13px;
+    margin-right: 200px;
+    padding: 20px;
+}
+
+.about {
+    margin-top: 20px;
+    background-color: rgb(9, 172, 236);
+    border-radius: 13px;
+    margin-right: 200px;
+    padding: 20px;
+    
+}
+
+.formulario {
+    margin-top: 20px;
+    background-color: rgb(253, 164, 61);
+    border-radius: 13px;
+    margin-right: 200px;
+    padding: 20px;
+    margin-bottom: 100px
+}
+
+.formulario input{
+    border-radius: 5px;
+    margin-bottom: 10px;
+    background-color: rgb(255, 255, 255);
+
+}
+
+.msj{
+    margin-bottom: 15px;
+}
+
+.formulario button{
+    background-color: #fdcdff;
+    border-color: #fdcdff;
+    width: 130px;
+    border-radius: 13px;
 }
