--- a/ProgramadorWeb/M1U2_HTML/cv.css
+++ b/ProgramadorWeb/M1U2_HTML/cv.css
@@ -1,33 +1,49 @@
-
-body
-{
-    margin-left: 50px;
+/*RESET*/
+*{
+    margin: 0;
+    padding: 0;
     font-family: inter;
+}
+
+
+
+body{
+  margin-left: 100px;
 }
 
 h1{
     font-weight: 600;
+    margin-top: 10px;
+    margin-bottom: 10px;
 }
 
-.foto {
-    border-radius: 14px;
+.principal{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;   
+    margin-right: 20%;
+    
 }
+
+.foto img{
+ border-radius: 14px;
+ 
+}
+
 
 .datosPersonales {
-    margin-top: 20px;
+ 
+    
     background-color: rgb(0, 204, 255);
     border-radius: 13px;
-    margin-right: 200px;
-    padding: 20px;
+    padding: 3%;
+    width: 70%;
     
 }
 
+
 p{
-    
-    font-weight: 400;
-    margin-right: 200px;
-    padding-right: 600px;
-    
+    font-weight: 400;    
 }
 
 h2{
@@ -35,19 +51,27 @@ h2{
 }
 
 .conocimientos{
+    display: flex;
+    flex-direction: column;
+    
     margin-top: 20px;
+    margin-right: 20%;
     background-color: rgb(182, 221, 76);
     border-radius: 13px;
-    margin-right: 200px;
-    padding: 20px;
+    
+    padding: 3%;
+    
+
 }
+
+
 
 .about {
     margin-top: 20px;
     background-color: rgb(9, 172, 236);
     border-radius: 13px;
-    margin-right: 200px;
-    padding: 20px;
+    margin-right: 20%;
+    padding: 3%;
     
 }
 
@@ -56,7 +80,7 @@ h2{
     background-color: rgb(253, 164, 61);
     border-radius: 13px;
     margin-right: 200px;
-    padding: 20px;
+    padding: 3%;
     margin-bottom: 100px
 }
 
@@ -76,4 +100,13 @@ h2{
     border-color: #fdcdff;
     width: 130px;
     border-radius: 13px;
+}
+
+/*RESPONSIVE
+*/
+@media (max-widht:768px){
+    .mostrar-menu,
+    .esconder-menu{
+        display:block
+    }
 }
